# bookmeter-discounts

./: .dockerignore  Cargo.toml  Dockerfile  README.md  compose.yml  get-amazon-html.sh  init.sql
.github/workflows/: build-and-push.yml  sync-db.yml  test.yml
.woodpecker/: sync-db-pr.yml  sync-db.yml
scripts/: k8s_db_sync.py
src/: bookmeter.rs  isbn.rs  kindle.rs  lib.rs  metrics.rs  model.rs  used_book_offer.rs
src/used_book/: bookoff.rs  mod.rs  netoff.rs  valuebooks.rs
tests/: used_book_db.rs  used_book_live.rs
tests/fixtures/used_book/: bookoff_product.html  bookoff_product_oos.html  bookoff_search.html  bookoff_search_empty.html  netoff_product.html  netoff_product_oos.html  netoff_search.html  netoff_search_empty.html  valuebooks_product.html  valuebooks_product_oos.html  valuebooks_search_empty.html
