[package]
name = "bookmeter_discounts"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
axum = { version = "0.8.0", features = ["macros"] }
backon = "1.3.0"
chrono = "0.4.38"
futures = "0.3.31"
reqwest = { version = "0.12.9", default-features = false, features = [
    "rustls-tls",
    "http2",
    "gzip",
    "json",
] }
scraper = "0.24.0"
sea-orm = { version = "1.1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.1", features = ["full"] }
url = "2.5.3"

[profile.release]
strip = true
